Fix issue where 100vh height on mobile caused overlap

--- a/css/index.css
+++ b/css/index.css
@@ -142,6 +142,12 @@ html {
   height: 100vh;
 }
 
+@media screen and (max-width: 600px) {
+  .h-100-vh {
+    height: 100%;
+  }
+}
+
 .h-full {
   height: 100%;
 }
